--- a/style/_fonts.scss
+++ b/style/_fonts.scss
@@ -1,3 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap");
+
+/* Var */
+$primaryColor: #29a867;
+$textColor: #0c0d36;
+$textsecColor: #525252;
+
+/* Size */
+h1 {
+  font-size: 3.25rem;
+}
+h3 {
+  font-size: 2.25rem;
+}
+h4 {
+  font-size: 1.125rem;
+}
+h5 {
+  font-size: 1rem;
+}
+p {
+  font-size: 14;
+}
