--- a/style/main.css
+++ b/style/main.css
@@ -10831,6 +10831,7 @@ body {
 footer {
   border-top: 1px solid #e4e4e4;
   margin-top: 150px;
+  background-color: #f5f5fb;
 }
 
 footer p {
@@ -10839,6 +10840,28 @@ footer p {
 
 .form-control {
   background-color: #f3f3f3;
+}
+
+/* Var */
+/* Size */
+h1 {
+  font-size: 3.25rem;
+}
+
+h3 {
+  font-size: 2.25rem;
+}
+
+h4 {
+  font-size: 1.125rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+p {
+  font-size: 14;
 }
 
 .navbar-store {
@@ -10880,10 +10903,29 @@ footer p {
   transition: background-color 200ms linear;
 }
 
+.pages-home {
+  /* Hero */
+  /* Pelayanan */
+  /* Menu Favorit */
+}
+
 .pages-home h1 {
   font-weight: 700;
   margin-bottom: 15px;
-  font-size: 3.25rem;
+}
+
+.pages-home h3 {
+  font-weight: 700;
+}
+
+.pages-home h5 {
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: #0c0d36;
+}
+
+.pages-home .home-tittle {
+  color: #29a867;
 }
 
 .pages-home li {
@@ -10896,16 +10938,34 @@ footer p {
   width: 100%;
 }
 
-.pages-home h5 {
-  margin-bottom: 15px;
+.pages-home .pelayanan {
+  margin-top: 100px;
 }
 
-.pages-home .store-favorit-menu {
-  margin-top: 30px;
+.pages-home .pelayanan-gambar {
+  width: 64px;
+  height: 64px;
+  margin: 32px 0;
+}
+
+.pages-home .pelayanan-tittle {
+  font-size: 1.125rem !important;
+  font-weight: bold;
+  color: #0c0d36;
+}
+
+.pages-home .pelayanan-deskripsi {
+  font-weight: normal;
+  color: #0c0d36;
+  margin: 8px 0 40px 0;
 }
 
 .pages-home .menu-favorit {
-  margin: 100px 0;
+  margin: 68px;
+}
+
+.pages-home .menu-favorit h3 {
+  margin-bottom: 2.5rem;
 }
 
 @media (max-width: 767.98px) {
@@ -10919,6 +10979,7 @@ footer p {
     text-align: center;
   }
   .pages-home .pesan .tombol {
+    float: none !important;
     margin: 24px 0 !important;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -10959,6 +11020,19 @@ footer p {
   text-decoration: none;
 }
 
+.menu-produk .card {
+  border: 1px solid #f0f0f0;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+.menu-produk .card:hover {
+  -webkit-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.5) !important;
+  box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.5) !important;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
 .menu-produk .produk-thumbnail {
   width: 100%;
   height: 150px;
@@ -10988,7 +11062,6 @@ footer p {
   font-weight: normal;
   font-size: 18px;
   color: #0c0d36;
-  margin-top: 12px;
 }
 
 .menu-produk .produk-harga {
