--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -1,40 +1,79 @@
 .pages-home {
   h1 {
     font-weight: 700;
+
     margin-bottom: 15px;
-    font-size: 3.25rem;
+  }
+  h3 {
+    font-weight: 700;
+  }
+  h5 {
+    font-weight: bold;
+
+    margin-bottom: 15px;
+
+    color: $textColor;
+  }
+
+  /* Hero */
+  .home-tittle {
+    color: $primaryColor;
   }
 
   li {
     list-style-type: none;
     text-decoration: none;
   }
-
   img {
     height: auto;
     width: 100%;
   }
 
-  h5 {
-    margin-bottom: 15px;
+  /* Pelayanan */
+  .pelayanan {
+    margin-top: 100px;
   }
-  .store-favorit-menu {
-    margin-top: 30px;
+  .pelayanan-gambar {
+    width: 64px;
+    height: 64px;
+
+    margin: 32px 0;
+  }
+  .pelayanan-tittle {
+    font-size: 1.125rem !important;
+    font-weight: bold;
+
+    color: $textColor;
+  }
+  .pelayanan-deskripsi {
+    font-weight: normal;
+
+    color: $textColor;
+
+    margin: 8px 0 40px 0;
   }
 
+  /* Menu Favorit */
+
   .menu-favorit {
-    margin: 100px 0;
+    margin: 68px;
+
+    h3 {
+      margin-bottom: 2.5rem;
+    }
   }
 
   @include media-breakpoint-down(sm) {
     h1 {
       font-size: 2.25rem;
     }
+
     .pesan {
       align-items: center;
       text-align: center;
 
       .tombol {
+        float: none !important;
         margin: 24px 0 !important;
         align-items: center;
         text-align: center;
