menambahkan vue.js atau bakcend galery atau carousel product images

--- a/style/components/_categories-menu.scss
+++ b/style/components/_categories-menu.scss
@@ -1,9 +1,9 @@
-.kategori {
+.page-categories {
   li {
     list-style-type: none;
     text-decoration: none;
   }
-  .menu-kategori {
+  .store-categories {
     font-size: 18px;
     text-align: center;
     color: #0c0d36;
