--- a/style/main.css
+++ b/style/main.css
@@ -10938,23 +10938,23 @@ p {
   width: 100%;
 }
 
-.pages-home .pelayanan {
+.pages-home .store-services {
   margin-top: 100px;
 }
 
-.pages-home .pelayanan-gambar {
+.pages-home .services-image {
   width: 64px;
   height: 64px;
   margin: 32px 0;
 }
 
-.pages-home .pelayanan-tittle {
+.pages-home .services-tittle {
   font-size: 1.125rem !important;
   font-weight: bold;
   color: #0c0d36;
 }
 
-.pages-home .pelayanan-deskripsi {
+.pages-home .services-description {
   font-weight: normal;
   color: #0c0d36;
   margin: 8px 0 40px 0;
@@ -10972,13 +10972,13 @@ p {
   .pages-home h1 {
     font-size: 2.25rem;
   }
-  .pages-home .pesan {
+  .pages-home .order-button {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     text-align: center;
   }
-  .pages-home .pesan .tombol {
+  .pages-home .order-button .tombol {
     float: none !important;
     margin: 24px 0 !important;
     -webkit-box-align: center;
@@ -10988,12 +10988,12 @@ p {
   }
 }
 
-.kategori li {
+.page-categories li {
   list-style-type: none;
   text-decoration: none;
 }
 
-.kategori .menu-kategori {
+.page-categories .store-categories {
   font-size: 18px;
   text-align: center;
   color: #0c0d36;
@@ -11002,38 +11002,38 @@ p {
   text-decoration: none;
 }
 
-.kategori .menu-kategori:hover {
+.page-categories .store-categories:hover {
   color: #29a867;
   border-bottom: 3px solid #29a867;
 }
 
-.kategori .active {
+.page-categories .active {
   color: #29a867;
   border-bottom: 3px solid #29a867 !important;
 }
 
-.menu-produk {
+.component-products {
   margin-bottom: 50px;
 }
 
-.menu-produk:hover {
+.component-products:hover {
   text-decoration: none;
 }
 
-.menu-produk .card {
+.component-products .card {
   border: 1px solid #f0f0f0;
   -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
 }
 
-.menu-produk .card:hover {
+.component-products .card:hover {
   -webkit-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.5) !important;
   box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.5) !important;
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
 
-.menu-produk .produk-thumbnail {
+.component-products .products-thumbnail {
   width: 100%;
   height: 150px;
   border-radius: 8px;
@@ -11042,12 +11042,12 @@ p {
   z-index: 1;
 }
 
-.menu-produk .produk-thumbnail:hover .produk-gambar, .menu-produk .produk-thumbnail:focus .produk-gambar {
+.component-products .products-thumbnail:hover .products-image, .component-products .products-thumbnail:focus .products-image {
   -webkit-transform: scale(1.2, 1.2);
           transform: scale(1.2, 1.2);
 }
 
-.menu-produk .produk-thumbnail .produk-gambar {
+.component-products .products-thumbnail .products-image {
   width: 100%;
   height: 100%;
   background-color: #ddd;
@@ -11058,15 +11058,34 @@ p {
   transition: all 0.3s ease;
 }
 
-.menu-produk .produk-teks {
+.component-products .products-text {
   font-weight: normal;
   font-size: 18px;
   color: #0c0d36;
 }
 
-.menu-produk .produk-harga {
+.component-products .products-price {
   font-weight: 700;
   font-size: 16px;
   color: #0c0d36;
+}
+
+.store-breadcrumbs .breadcrumb {
+  background: transparent;
+  padding: 0;
+  padding: 10px 0;
+}
+
+.store-breadcrumbs .breadcrumb-item + .breadcrumb-item::before {
+  padding: 0 1.5rem;
+}
+
+.store-breadcrumbs .breadcrumb-item.active {
+  font-weight: 500;
+  color: #0c0d36;
+}
+
+.store-breadcrumbs a {
+  color: #979797;
 }
 /*# sourceMappingURL=main.css.map */
