--- a/style/main.scss
+++ b/style/main.scss
@@ -7,7 +7,8 @@
 
 @import "pages/home";
 
-@import "components/kategori";
-@import "components/produk";
+@import "components/categories-menu";
+@import "components/products";
+@import "components/breadcrumbs";
 
 @import "utility/tombol";
