--- a/style/_fonts.scss
+++ b/style/_fonts.scss
@@ -7,6 +7,8 @@ $primaryColor: #29a867;
 $textColor: #0c0d36;
 $textsecColor: #525252;
 
+$twofor: 1.5rem;
+
 /* Size */
 h1 {
   font-size: 3.25rem;
