--- a/style/components/_categories-menu.scss
+++ b/style/components/_categories-menu.scss
@@ -1,10 +1,13 @@
 .page-categories {
+  h5 {
+    font-size: 1.5rem;
+  }
   li {
     list-style-type: none;
     text-decoration: none;
   }
   .store-categories {
-    font-size: 18px;
+    font-size: 1.125rem;
     text-align: center;
     color: #0c0d36;
     font-weight: normal;
