--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -39,7 +39,7 @@
 
     margin: 32px 0;
   }
-  .services-tittle {
+  .services-title {
     font-size: 1.125rem !important;
     font-weight: bold;
 
