--- a/style/main.css
+++ b/style/main.css
@@ -11066,6 +11066,59 @@ p {
   color: #0c0d36;
 }
 
+.store-cart h5 {
+  color: #0c0d36;
+  font-weight: 600;
+  margin-top: 18px;
+}
+
+.store-cart .product-title {
+  font-size: 1.125rem;
+  color: #0c0d36;
+  margin-top: 15px;
+}
+
+.store-cart .product-subtitle {
+  font-size: 14px;
+  color: #979797;
+}
+
+.store-cart .table-cart {
+  margin: 0 -15px;
+}
+
+.store-cart .table-cart th {
+  font-weight: 200;
+}
+
+.store-cart .table-cart .cart-image {
+  border-radius: 8px;
+  max-height: 85px;
+}
+
+.store-cart .table-cart .btn-outline-success {
+  font-size: 24px;
+  padding: 0;
+  display: inline-block;
+  text-align: center;
+  border-width: 2px;
+  width: 32px;
+  height: 36px;
+}
+
+.store-cart .table-cart .btn-cart {
+  margin-top: 15px;
+}
+
+.store-cart .cart-total {
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 36px;
+  color: #0c0d36;
+  margin-top: 15px;
+}
+
 .page-categories h5 {
   font-size: 1.5rem;
 }
